[package]
name = "cpc-nvm3-lib"
version = "1.0.0"
edition = "2021"

[lib]
name = "cpc_nvm3"
crate-type = ["cdylib"]

[dependencies]
libcpc = { git = "https://github.com/SiliconLabs/cpc-daemon.git", tag = "v4.3.0"}
env_logger = "0.10.0"
errno = "0.3.0"
lazy_static = "1.4.0"
libc = "0.2.140"
log = "0.4.17"
nom = "7.1.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_repr = "0.1.12"
bincode = "1.3.3"
thiserror = "1.0.40"
num_enum = "0.6.1"
pkg-version = "1.0.0"
chrono = "0.4.24"

[build-dependencies]
cbindgen = "0.24.3"

# profile alias that matches its target directory
[profile.develop]
inherits = "dev"
